Class2: Game Mode, Player Character and Enhanced Input System

--- a/BVC_UnrealClass/Config/DefaultEngine.ini
+++ b/BVC_UnrealClass/Config/DefaultEngine.ini
@@ -1,8 +1,19 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/BVC_UnrealClass/Maps/Sandbox.Sandbox
 EditorStartupMap=/Game/BVC_UnrealClass/Maps/Sandbox.Sandbox
+LocalMapOptions=
+TransitionMap=None
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+FourPlayerSplitscreenLayout=Grid
+bOffsetPlayerGamepadIds=False
+GameInstanceClass=/Script/Engine.GameInstance
+GameDefaultMap=/Game/BVC_UnrealClass/Maps/Sandbox.Sandbox
+ServerDefaultMap=/Engine/Maps/Entry.Entry
+GlobalDefaultGameMode=/Game/BVC_UnrealClass/Blueprints/BP_PlatformerGameMode.BP_PlatformerGameMode_C
+GlobalDefaultServerGameMode=None
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
